Fix wrong font family.

--- a/src/base/site.scss
+++ b/src/base/site.scss
@@ -1,6 +1,6 @@
 html {
   color: map-get($colors, 'text');
-  font-family: 'Open Sans', serif;
+  font-family: 'Open Sans', sans-serif;
   font-size: map-get($font-sizes, 'small');
   line-height: 1.8;
 }
